fix: [WA-899] Card heading wrapping bug

--- a/docroot/themes/custom/wateraid/components/card/card.scss
+++ b/docroot/themes/custom/wateraid/components/card/card.scss
@@ -157,6 +157,7 @@
   }
 
   &--signposting {
+    word-break: break-word;
     .card__wrapper {
       background-color: $wa-white;
     }
